

                              Kiji Schema Release Notes

Version 1.0.0-rc4
  * SCHEMA-82. KijiCell is now the uniquely located cell in a table with
      family, qualifier, and timestamp.  KijiCounters no longer exist and
      are represented as KijiCell<Long> with no writer schema instead.
  * SCHEMA-143. KijiURI constructors are now hidden.  KijiURIs should be built
      with KijiURIBuilders.
  * SCHEMA-109. KijiInstaller is no longer static.  Get an instance of it with
      KijiInstaller.get().

Version 1.0.0-rc3
  * SCHEMA-83. Added containsCell method to KijiRowData.
  * SCHEMA-154. KijiAdmin is now an interface. Use Kiji.getAdmin() to
      get an instance.
  * SCHEMA-105. Hide KijiColumnPager from public API.
  * SCHEMA-127. Command-line tools --confirm is replaced with --interactive,
      which suppresses yes/no prompts if false.
  * SCHEMA-142. KijiTableReader.getScanner() now takes a KijiScannerOptions
      argument as configuration.
  * SCHEMA-50. Kiji.close() is replaced by Kiji.retain() and Kiji.release().
      Kiji instances are created with a reference count of 1. Use the retain()
      method to increase this reference count, if another consumer holds a
      reference to this object.

      You should call release(), or ReferenceCountableUtils.releaseQuietly()
      before discarding the reference. Instances are closed when the reference
      count hits zero.
  * SCHEMA-97. org.kiji.schema.Kiji is now an interface, not a class.
      Use Kiji.Factory.open() to get a Kiji instance.
  * SCHEMA-157. Add KijiTable.getURI().
  * SCHEMA-159. Fixes a bug where KijiRowData.getValues() would return values
      in the wrong order.
  * SCHEMA-128. Add minPoolSize option to KijiTablePool. Kiji will aggressively
      open the min number of connections the first time a table connection is
      requested and will maintain at least that size of a pool indefinitely.
  * SCHEMA-17. DeleteTool replaces and improves DeleteTableTool.