@@ -3,6 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.0.0-rc4
+  * SCHEMA-102. Removed overloaded variety of toHBaseFilter that accepted a
+      ColumnNameTranslator.
   * SCHEMA-82. KijiCell is now the uniquely located cell in a table with
       family, qualifier, and timestamp.  KijiCounters no longer exist and
       are represented as KijiCell<Long> with no writer schema instead.
